@@ -1,1 +1,2 @@
-eid,sig,eps
+eid,sig_PGA,eps_PGA
+5420248727552,0.000000E+00,0.000000E+00
